fix: add overflow-x-hidden to body

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,6 @@
 
 @layer base {
     body {
-        @apply first-line:absolute top-0 z-[-2] min-h-screen w-screen bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))];
+        @apply top-0 z-[-2] overflow-x-hidden  bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))];
     }
 }
